# scityping

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  TODO  pyproject.toml  setup.py
.github/workflows/: build.yml  publish-on-testpypi.yml
docs/: TODO  api.rst  conf.py  defining-serializers.md  defining-serializers.rst  getting_started.md  implementation_logic.md  index.md  types_reference.rst
docs/api/: base.rst  base_types.rst  functions.rst  json.rst  numpy.rst  pint.rst  pydantic.rst  quantities.rst  scipy.rst  torch.rst  utils.rst
docs/dev-docs/: numpy-serialization.nb.html
scityping/: __init__.py  base.py  base_types.py  functions.py  holoviews.py  json.py  numpy.py  pint.py  purefunction.py  pydantic.py  quantities.py  scipy.py  torch.py  typing.py  utils.py  xarray.py
scityping/config/: __init__.py  defaults.cfg  valconfig.py  validating_config.py
tests/: test_autocontainers.py  test_base_types.py  test_dataclasses.py  test_numpy.py  test_pickling.py  test_pint.py  test_purefunction.py  test_scipy.py  test_torch.py  test_types.py  test_utils.py  test_xarray.py
